--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -1,12 +1,15 @@
 {% extends 'base.html.twig' %}
 
+{% block javascripts %}
++    {% block importmap %}{{ importmap('app') }}{% endblock %}
+{% endblock %}
+
 {% block body %}
 <main>
     <section>
-    
-    {{ ux_icon('tabler:user', {height: '1.25em', width: '1.25em'}) }}
-    {{user.email}}
-    <a href="/logout">{{ ux_icon('tabler:logout', {height: '1.25em', width: '1.25em'}) }} logout</a>
+        {{ ux_icon('tabler:user', {height: '1.25em', width: '1.25em'}) }}
+        {{user.email}}
+        <a href="/logout">{{ ux_icon('tabler:logout', {height: '1.25em', width: '1.25em'}) }} logout</a>
     </section>
 </main>
 {% endblock %}
